--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
+# Ignore VSCode settings
+.vscode/
+*.code-workspace
 
-build/*
+# Ignore build artifacts
+/build/
+/*.elf
+/*.map
