--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,47 @@
-# Ignore VSCode settings
-.vscode/
-*.code-workspace
+# Prerequisites
+*.d
+build
+out
+.vscode
 
-# Ignore build artifacts
-/build/
-/*.elf
-/*.map
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
+
+# Linker output
+*.ilk
+*.map
+*.exp
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+*.bin
+
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
